--- a/consult/css/styles.css
+++ b/consult/css/styles.css
@@ -2448,6 +2448,44 @@ body.page-profile-settings.consults .places input.plus {
 body.page-profile-settings.consults input[type="submit"] {
   margin-right: 20px;
 }
+/* line 376, page_profile_settings.less */
+body.page-profile-settings.worktime form .day {
+  overflow: hidden;
+}
+/* line 378, page_profile_settings.less */
+body.page-profile-settings.worktime form .day h3 {
+  color: #8aa4a2;
+  font-size: 1.4rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  margin-top: 15px;
+}
+/* line 385, page_profile_settings.less */
+body.page-profile-settings.worktime form .day .field {
+  float: left;
+  width: 48%;
+}
+/* line 388, page_profile_settings.less */
+body.page-profile-settings.worktime form .day .field label {
+  color: #35504e;
+  font-size: 1.4rem;
+  font-weight: 500;
+  margin-top: 0;
+}
+/* line 394, page_profile_settings.less */
+body.page-profile-settings.worktime form .day .field.begin {
+  margin-right: 4%;
+}
+/* line 397, page_profile_settings.less */
+body.page-profile-settings.worktime form .day .field .select2-container {
+  width: 100% !important;
+}
+/* line 402, page_profile_settings.less */
+body.page-profile-settings.worktime form input[type="submit"] {
+  margin-top: 30px;
+  margin-right: 20px;
+  padding: 9px 17px 6px 17px;
+}
 /* line 1, cheat-sheet.less */
 .wrapper {
   position: relative;
