--- a/consult/less/mainpage.less
+++ b/consult/less/mainpage.less
@@ -158,7 +158,7 @@ body.page-mainpage{
                     margin-right: 10px;
                 }
                 .text{
-                    overflow: hidden;
+                    float: left;
                     p{
                         margin:2px 0;
                         &.count{
