--- a/consult/less/schedule.less
+++ b/consult/less/schedule.less
@@ -1,5 +1,90 @@
 
 body.page-profile-schedule{
+	.edit-worktime{
+		position: fixed;
+		z-index: 2;
+		width: 100%;
+		display: none;
+		.fader{
+			position: fixed;
+			width: 100%;
+			height: 100%;
+			background: rgba(255,255,255,0.5);
+		}
+		.content-block{
+			position: relative;
+			width: 465px;
+			left: 50%;
+			margin-left: -232px;
+			border:solid 1px @sea_light;
+			top:150px;
+			padding:0;
+			i.close{
+				font-size:1.4rem;
+				position: absolute;
+				right:20px;
+				top:23px;
+				cursor:pointer;
+				z-index: 1;
+				&:hover{
+					color:@sea;
+				}
+			}
+			h4{
+				padding-top:0;
+				margin-left: 20px;
+				margin-top: 20px;
+			}
+			form{
+				padding:20px;
+				overflow: hidden;
+				.field.times{
+					.timeselect{
+						float: right;
+						margin-left: 15px;
+						span{
+							display: block;
+							float: left;
+							margin-right: 10px;
+							margin-top: 8px;
+						}
+						input{
+							float: right;
+							width:100px;
+						}
+					}
+					label.date{
+						overflow: hidden;
+						margin:0;
+						top:9px;
+					}
+				}
+				.field.type{
+					overflow: hidden;
+					.radio.container, .checkbox.container{
+						float: left;
+						margin-right: 10px;
+						margin-top: 5px;
+						margin-bottom: 5px;
+					}
+					label{
+						display: block;
+						float: left;
+						margin-top: 5px;
+						margin-bottom: 5px;
+					}
+					.worktype{
+						margin-left: 30px;
+						display:none;
+					}
+				}
+				input.btn{
+					margin-top: 20px;
+					float: right;
+				}
+			}
+		}
+	}
 	.edit-schedule{
 		position: absolute;
 		z-index: 2;
