--- a/consult/less/global.less
+++ b/consult/less/global.less
@@ -52,6 +52,19 @@ header.header {
         -webkit-border-radius:100%;
         float: left;        
     }
+    .time{
+        float: right;
+        margin-right: 40px;
+        p{
+            display: block;
+            float: left;
+            margin-right: 20px;
+            margin-top: 11px;
+        }
+        .clock{
+            float: right;
+        }
+    }
     .project-name{
         float: left;
         margin-left: 10px;
